--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-static": "^2.0.2",
 		"@sveltejs/kit": "^1.5.0",
 		"autoprefixer": "^10.4.14",
+		"gh-pages": "^5.0.0",
 		"postcss": "^8.4.24",
 		"svelte": "^3.54.0",
 		"tailwindcss": "^3.3.2",
