repo name change commit

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
 
             - name: build
               env:
-                  BASE_PATH: "/monkeytype-clone"
+                  BASE_PATH: "/pandaKeys"
               run: |
                   npm run build
                   touch build/.nojekyll
